<resources>
    <string name="app_name">MyChat</string>
    <string name="activity_chat_send_message">Написать сообщение…</string>
    <string name="nav_bottom_chats">Чаты</string>
    <string name="nav_bottom_settings">Настройки</string>
    <string name="nav_bottom_contacts">Контакты</string>

    <!-- Settings fragment -->
    <string name="fragment_settings_name">Имя</string>м
    <string name="fragment_settings_userid">Id</string>
    <string name="fragment_settings_email">Email</string>
    <string name="fragment_settings_my_profile">Мой профиль</string>
    <string name="fragment_settings_update_image">Изменить</string>

    <!-- ChatEdit activity -->
    <string name="activity_chat_edit_activity">Добавить пользователя</string>
    <string name="plus">+</string>
    <string name="user_name">User Name</string>
    <string name="message_content">Message content</string>
    <string name="close_button_description">Закрыть</string>
    <string name="title_activity_main12">MainActivity12</string>
</resources>